Fix Red Contrast Issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -152,7 +152,7 @@ section.hero-container div .cta {
 /****** Message ***********/
 .notice li,
 .error li {
-  color: red;
+  color: rgb(148, 0, 0);
 }
 
 /******* Footer ***************/
